<resources>
    <string name="app_name">unlimitedApp</string>
    <string name="go_to_numberconvert">go to numberConvert</string>
    <string name="go_to_praise">go to praise</string>
    <string name="go_to_currency_convert">go to currency Convert</string>
    <string name="go_to_qibla">go to al qibla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="style_title">app style</string>
    <string name="style_header">Theme Preference</string>
    <string name="language_header">Language</string>
    <string name="language_title">app Language</string>
    <string name="auth_header">App auth</string>
    <string name="auth_title">set username and password</string>
    <string name="LoadingActivity_unlimited_apps">Unlimited Apps</string>
    <string name="SingleCategoryActivity_tools">tools</string>
    <string name="category_list_item_textview">TextView</string>
    <string name="AboutUsActivity_about_us">About us</string>
    <string name="tool_list_item_textview">TextView</string>
    <string name="tool_list_item_textview_desc">TextView</string>
    <string name="caesarCipher_enter_your_text">Enter your Text</string>
    <string name="caesarCipher_your_message">your Message</string>
    <string name="caesarCipher_key">Key</string>
    <string name="caesarCipher_cipher_text">Cipher Text</string>
    <string name="caesarCipher_encrypt">Encrypt</string>
    <string name="caesarCipher_cryptoceasar">CryptoCeasar</string>
    <string name="caesarCipher_decrypt">Decrypt</string>
    <string name="currencyConvert_currecy_convert">Currecy_Convert</string>
    <string name="currencyConvert_enter_the_amount">Enter the Amount</string>
    <string name="currencyConvert_from">From</string>
    <string name="currencyConvert_to">To</string>
    <string name="currencyConvert_convert">Convert</string>
    <string name="massConverter_enter_the_number">Enter the Number</string>
    <string name="massConverter_from">From</string>
    <string name="massConverter_to">To</string>
    <string name="massConverter_convert">Convert</string>
    <string name="md5Generator_input">Input:</string>
    <string name="md5Generator_your_text_here">your text here</string>
    <string name="md5Generator_md5">Md5</string>
    <string name="md5Generator_result">Result:</string>
    <string name="praise_ram">Ram</string>
    <string name="praise_adan">adan</string>
    <string name="praise_kar">Kar</string>
    <string name="praise_eem">eem</string>
    <string name="praise_sphan_allah">sphan allah</string>
    <string name="praise_reset">reset</string>
    <string name="sha1Generator_input">Input:</string>
    <string name="sha1Generator_your_text_here">your text here</string>
    <string name="sha1Generator_sha1">Sha1</string>
    <string name="sha1Generator_result">Result:</string>
    <string name="sha256Generator_input">Input:</string>
    <string name="sha256Generator_your_text_here">your text here</string>
    <string name="sha256Generator_sha1">Sha1</string>
    <string name="sha256Generator_result">Result:</string>
    <string name="speedConvert_enter_the_number">Enter the Number</string>
    <string name="speedConvert_from">From</string>
    <string name="speedConvert_to">To</string>
    <string name="speedConvert_convert">Convert</string>
    <string name="temperature_enter_the_number">Enter the Number</string>
    <string name="temperature_from">From</string>
    <string name="temperature_to">To</string>
    <string name="temperature_convert">Convert</string>
    <string name="toolbar_settings">settings</string>
    <string name="toolbar_about_us">about Us</string>
    <string name="toolbar_exit">exit</string>
    <string name="login_pgae_title">Login Page</string>
    <string name="login_page_password_hint">Password</string>
    <string name="login_page_email_hint">Email</string>
    <string name="login_page_button_login">Login Now</string>
    <string name="login_page_register_btn">Register</string>
    <string name="pages_register_title"> register</string>
    <string name="pages_register_full_name_hit">Full name</string>
    <string name="pages_register_age_hit">Age</string>
    <string name="pages_register_button">register now</string>
    <string name="login_page_confirmPassword_hint">Confirm Password</string>
    <string name="toolbar_login">login</string>
    <string name="toolbar_logout">logout</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="email_invalid">Please enter a valid email</string>
    <string name="Authentication_failed">Authentication failed.</string>
    <string name="error_field_fullname_required">Full Name is required</string>
    <string name="error_field_age_required">Age is required</string>
    <string name="error_field_email_required">Email is required</string>
    <string name="error_field_password_required">Password is required</string>
    <string name="error_field_confirm_password_required">Confirm Password is required</string>
    <string name="error_field_confirm_password_not_match">Password does not match</string>
    <string name="error_field_age_length2_invalid">Age must be less than 3 digits</string>
    <string name="error_field_email_length_invalid">Email must be less than 30 characters</string>
    <string name="error_field_email_invalid">Email must be valid</string>
    <string name="error_field_password_length_invalid">Password must be less than 30 characters</string>
    <string name="User_created_successfully">User created successfully</string>
    <string name="error_is">"Error: "</string>
    <string name="about_us_title">About Us</string>
    <string name="home_page_title">homepage</string>
    <string name="error">Error</string>
    <string name="result">Result: </string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="calculat_age_title">Calculat Age</string>
    <string name="_01_01_2022">01/01/2022</string>
    <string name="to">To</string>
    <string name="calculate">Calculate</string>
    <string name="result_btn">Result</string>
    <string name="_0_years_0_months_0_days">0 Years | 0 Months | 0 Days</string>
    <string name="tools_stopwatch_title">Stopwatch</string>
    <!--    qr code -->
    <string name="save">Save</string>
    <string name="generate">Generate</string>
    <string name="enter_text">Enter Text</string>
    <string name="value_required">Value Required</string>
    <string name="reset">resst</string>
    <string name="lenght">length:</string>
    <string name="include_numbers">include numbers</string>
    <string name="random_password_invalid_length">invalid_length</string>
    <string name="random_password_title">random password</string>
    <string name="Enter_your_Message_Here">Enter your Message Here</string>
    <string name="Enter_your_Key">Enter your Key</string>
    <string name="vigenereCipher_title">vigenere Cipher</string>
    <string name="message_or_key_is_empty">message or key  inputs is empty</string>
    <string name="share_btn">Share</string>
    <string name="share_with">share_with</string>
    <string name="add_a_new_item_here">Add a new item here</string>
    <string name="tools_todo_title">todo</string>
    <string name="tools_todo_error_empty_title">Please enter a title</string>
    <string name="action_delete_all">action_delete_all</string>
    <string name="tools_todo_delete_all_title">Confirm</string>
    <string name="tools_todo_delete_all_message">Are you sure you want to delete all items?</string>
    <string name="tools_todo_delete_all_positive">yes</string>
    <string name="tools_todo_delete_all_negative">no</string>
    <string name="register_btn_loading">creating account...</string>
    <string name="lenghtConverter_title">lenght Converter</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="cancel">C</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="tools_notepad_delete_all_title">delete all text</string>
    <string name="tools_notepad_delete_all_message">are you sure you went delete all text</string>
    <string name="tools_notepad_delete_all_positive">yes</string>
    <string name="tools_notepad_delete_all_negative">no</string>
    <string name="tools_notepad_title">notePad</string>
</resources>