<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/toolbar_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutUs"
        android:orderInCategory="100"
        android:title="@string/toolbar_about_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/toolbar_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/toolbar_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/toolbar_exit"
        app:showAsAction="never" />
</menu>