<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tools.qrgenearator.MainActivity">

    <include android:id="@+id/Toolbar" layout="@layout/toolbar" />

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/edt_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:id="@+id/generate_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/generate"/>

            <Button
                android:layout_weight="1"
                android:id="@+id/save_barcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/qr_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>